public/styles/layout.css
/* NAVIGATION BAR */
nav {
  padding: 0 2em;
  background: rgba(200, 54, 54, 0.68);
  font-size: 1.2em;
}

nav a, nav a.brand-logo {
  line-height: 54px;
  height: 54px;
  padding: 5px 0;
}

.row {
  margin-top: 50px;
}

.row .col {
  float: none;
  display: inline-block;
}

.row .col .m5 {
  margin: 0 auto;
}

.card {
  color: black;
  float: center;
}

.card .card-image img {
  display: block;
  border-radius: 2px 2px 0 0;
  position: relative;
  padding: 0.5em;
  width: 80%;
  height: 80%;
  float: center;
}

h6 {
  font-weight: bold;
}

.brand-logo {
  left: 0;
  -webkit-transform: translateX(0);
  transform: translateX(0);
}

img.nav-logo {
  height: 50px;
  width: auto;
}

.nav-menu_btn, .nav-menu_btn:focus {
  border: 0;
  background-color: transparent;
  height: 64px;
  text-shadow: 0;
  transition: ease all 0.3s;
}

button.nav-menu_btn:hover {
  background: rgba(0, 0, 0, 0.25);
}

/* MAIN CONTENT */
.prod-background {
  background: url("./images/prodBackground.png") no-repeat center center fixed;
  background-size: cover;
}

body.home {
  background: url("./images/warrior.jpeg") no-repeat center center fixed;
  background-size: cover;
}

body {
  font-family: 'Cinzel', serif;
  color: white;
  text-align: center;
  -webkit-perspective: 1100px;
}

h1 {
  font-family: 'Cinzel', serif;
  font-weight: bold;
}

body.mainB {
  background: url("./images/warrior.jpeg") no-repeat center center fixed;
  background-size: cover;
}

a {
  color: #ccc;
}

/*-------------------------------------*/
.cf:before, .cf:after {
  content: "";
  display: table;
}

.cf:after {
  clear: both;
}

.cf {
  zoom: 1;
}

/*-------------------------------------*/
.form-wrapper {
  width: 450px;
  padding: 15px;
  margin: 150px auto 50px;
  margin-bottom: 5px;
  background: #444;
  background: rgba(200, 54, 54, 0.3);
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
}

.form-wrapper input {
  padding: 10px 5px;
  float: left;
  font-size: bold 15px;
  font-family: 'Cinzel', serif;
  border: 0;
  color: black;
  background: #eee;
  box-shadow: 0;
  border-radius: 3px;
}

input:focus, input[type=text]:focus, input[type=password]:focus {
  border: 0 !important;
  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
}

.form-wrapper input::-webkit-input-placeholder {
  color: #454444;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper input:-moz-placeholder {
  color: #454444;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper input:-ms-input-placeholder {
  color: #454444;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper button {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin: 4px;
  margin-top: 20px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size: 20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

.form-wrapper button:hover {
  background: #e54040;
}

.form-wrapper button:active,
.form-wrapper button:focus {
  background: #c42f2f;
}

.form-wrapper button:before {
  content: '';
  position: absolute;
  border-width: 8px 8px 8px 0;
  border-style: none solid solid solid;
  border-color: transparent #d83c3c transparent;
}

.form-wrapper button:hover:before {
  border-right-color: #e54040;
}

.form-wrapper button:focus:before {
  border-right-color: #c42f2f;
}

.form-wrapper button::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.byline p {
  text-align: center;
  color: #c6c6c6;
  font-size: bold 18px;
  font-family: 'Cinzel', serif;
  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
}

.byline p a {
  color: #d83c3c;
  text-decoration: none;
}

#prod {
  width: 330px;
  height: 30px;
  margin-left: 40px;
}

#b1 {
  width: 163px;
  height: 30px;
  margin-top: 2px;
  margin-left: 40px;
}

#b2 {
  width: 163px;
  height: 30px;
  margin-top: 2px;
  margin-left: 3px;
}

.search {
  text-align: center;
}

#emailReg {
  width: 163px;
  height: 30px;
  border: 1px solid grey;
  background-color: white;
  margin-right: 20px;
  border-radius: 5px;
  padding: 1em;
  color: #181818;
  margin-top: 150px;
}

::-webkit-input-placeholder {
  font-family: 'Cinzel', serif;
  /* WebKit, Blink, Edge */
  color: #454444;
}

#passReg {
  width: 163px;
  height: 30px;
  border: 1px solid grey;
  background-color: white;
  display: inline-block;
  margin-left: 20px;
  border-radius: 5px;
  padding: 1em;
  color: #181818;
}

#regBtn {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin-top: 60px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size: 20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

#regBtn:hover {
  background: #ea6666;
}

.log-words {
  color: white;
  font: 45px;
  text-align: center;
}

label {
  color: white;
  font-size: 15pt;
}

.form-login {
  margin-top: 200px;
  padding: 2em;
  height: 530px;
  background: rgba(200, 54, 54, 0.3);
  color: solid white;
}

#passLogin {
  width: 163px;
  height: 20px;
  border: 1px solid grey;
  background-color: white;
  margin-left: 20px;
  border-radius: 5px;
  padding: 1em;
  color: #555;
}

#emailLogin {
  width: 163px;
  height: 20px;
  border: 1px solid grey;
  background-color: white;
  margin-left: 20px;
  margin-right: 60px;
  border-radius: 5px;
  padding: 1em;
  color: #555;
}

::-webkit-input-placeholder {
  /* WebKit, Blink, Edge */
  color: #454444;
}

.text-box-form {
  margin-top: 120px;
  margin-right: 50px;
}

#logNow {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin-top: 60px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size: 20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

#logNow:hover {
  background: #ea6666;
}

.voteBtn {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin-top: 10px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size: 20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

.voteBtn:hover {
  background: #ea6666;
}

#loginBtn {
  width: 90px;
  height: 30px;
  background-color: red;
  border-radius: 8px;
  border: 0;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
  margin-top: 30px;
}

.card .card-image {
  height: 250px;
  padding: 15px 0 0 0;
  text-align: center;
  margin-bottom: 25px;
}

.card .card-image img {
  display: inline-block;
  padding: 0;
  max-width: 100%;
  height: auto;
  max-height: 250px;
  width: auto;
  display: block;
  margin: 0 auto;
}

.card .card-content {
  height: 150px;
  max-height: 150px;
}

.meter {
  width: 40px;
  height: 480px;
  position: absolute;
  top: 70px;
  right: 30px;
  background: #555;
  -moz-border-radius: 25px;
  -webkit-border-radius: 25px;
  border-radius: 25px;
  padding: 10px;
  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
  float: right;
  margin-top: 150px;
  transform: rotate(180deg);
}

.meter > span {
  display: block;
  height: 100%;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background-color: #c83636;
  background-image: linear-gradient(center bottom, #c83636 37%, red 69%);
  transform: rotate(180deg);
  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3), inset 0 -2px 6px rgba(0, 0, 0, 0.4);
  position: relative;
  overflow: hidden;
}

.meter > span:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
  z-index: 1;
  background-size: 50px 50px;
  animation: move 2s linear infinite;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  overflow: hidden;
}

.sliding-menu {
  height: 64px;
  width: 100px;
}

.sliding-menu a, .sliding-menu .button-collapse, .sliding-menu .material-icons {
  display: inherit;
  font-style: normal;
}

#favText {
  color: black;
}

#heart1 {
  margin-left: 20px;
  width: 20px;
  height: 20px;
}

#heart2 {
  margin-left: 20px;
  width: 20px;
  height: 20px;
}

#heart3 {
  margin-left: 20px;
  width: 20px;
  height: 20px;
}

#heart4 {
  margin-left: 20px;
  width: 20px;
  height: 20px;
}

.fav2 {
  display: none;
}

.fav4 {
  display: none;
}

#firstProd {
  -webkit-transform-origin: left center;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: -webkit-transform 0.5s ease-in-out;
  z-index: 50;
}

#secondProd {
  -webkit-transform-origin: right center;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: -webkit-transform 0.5s ease-in-out;
  z-index: 50;
}

.vote-results {
  border: 0.5px solid white;
  background-color: blue;
  color: white;
}

.res {
  display: none;
  width: 150px;
}

